Fix issues with elements overlapping sticky header

--- a/styles/components/_sticky_cta.scss
+++ b/styles/components/_sticky_cta.scss
@@ -1,5 +1,6 @@
 .sticky-cta {
   margin-left: -$gap * 4;
+  z-index: 10;
 
   @include media($medium-screen) {
     margin-left: -$gap * 5;
